--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-
-    </head>
-    <body>
-        <td>
-            <tr>
-                
-            </tr>
-            <tr>
-                
-            </tr>
-        </td>
-    </body>
-</html>
+分享个人收集的电子书
